--- a/reg.html
+++ b/reg.html
@@ -1,7 +1,7 @@
 <h1 align="center">Login Form</h1>
 <form>
 	<table cellspacing="15" cellpadding="5" bgcolor="lavender" align="center">
-		<tr><td><label for="uname">Username</label></td>
+		<tr><td><label for="uname">Uname</label></td>
 			<td><input type="text" placeholder="Username"></td></tr>
 		<tr><td><label for="password">Password</label></td>
                         <td><input type="password" placeholder="Password"></td></tr>
